# ArthasAI

./: .gitignore  package-lock.json  package.json  readme.md
ArthasAIbackend/backend/: .gitignore  chat.py  config.py  dependencies.py  embeddings.py  main.py  models.py  router.py  storage.py  trying.py  trys3
ArthasAIbackend/tests/: test_main.py  try.py
backend/: pyproject.toml
backend/backend/: embeddings.py  main.py  tryS3.py
backend/backend/Raptor/: Raptor.py
backend/backend/search/: README.md  colbert_search.py  conda_env.yml  conda_env_cpu.yml
backend/backend/search/checkpoints/colbertv2.0/: artifact.metadata  config.json  tokenizer_config.json
backend/offline/: generate_markdown.ipynb
backend/tests/: test_main.py
frontend/arthas-ai/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/arthas-ai/app/: globals.css  layout.tsx  middleware.ts  page.tsx
frontend/arthas-ai/app/about/: page.tsx
frontend/arthas-ai/app/components/: Navbar.tsx  Pagetab.tsx  Searchbar.tsx  Teamcard.tsx  chatInterface.tsx
frontend/arthas-ai/app/dashboard/: action.ts  page.tsx
frontend/arthas-ai/app/document/: utils.ts
frontend/arthas-ai/app/homepage/: Slider.tsx  actions.ts  page.tsx
frontend/arthas-ai/app/login/: actions.ts  page.tsx
frontend/arthas-ai/app/resources/: page.tsx
frontend/arthas-ai/app/teampage/: page.tsx
frontend/arthas-ai/app/utils/: databaseUtils.ts
frontend/arthas-ai/components/ui/: customBlockWrapper.tsx  resizable.tsx  toast.tsx
frontend/arthas-ai/pages/: dashboard.tsx  index.tsx
(+26 files in other folders)
